Unit tests for BacktesterDataFeedService